--- a/CommandButton.xaml
+++ b/CommandButton.xaml
@@ -3,8 +3,67 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:overlay_popup" >
+             xmlns:clr="clr-namespace:System.Windows.Media.Converters;assembly=WindowsBase"
+        xmlns:local="clr-namespace:overlay_popup">
+    <UserControl.Resources>
+        <SolidColorBrush x:Key="Button.MouseOver.Background" Color="#FFBEE6FD"/>
+        <SolidColorBrush x:Key="Button.MouseOver.Border" Color="#FF3C7FB1"/>
+        <SolidColorBrush x:Key="Button.Pressed.Background" Color="#FFC4E5F6"/>
+        <SolidColorBrush x:Key="Button.Pressed.Border" Color="#FF2C628B"/>
+        <SolidColorBrush x:Key="Button.Disabled.Background" Color="#FFF4F4F4"/>
+        <SolidColorBrush x:Key="Button.Disabled.Border" Color="#FFADB2B5"/>
+        <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383"/>
+        <ControlTemplate x:Key="ColouredButton" TargetType="{x:Type ButtonBase}">
+            <Border x:Name="border" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" SnapsToDevicePixels="true">
+                <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+            </Border>
+            <ControlTemplate.Triggers>
+                <Trigger Property="Button.IsDefaulted" Value="true">
+                    <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+                </Trigger>
+                <Trigger Property="IsMouseOver" Value="false">
+                    <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="Green"/>
+                </Trigger>
+                <Trigger Property="IsMouseOver" Value="true">
+                    <!--<Setter Property="Background" TargetName="border" Value="{Binding Path=BackgroundHoverColourBrush}"/>-->
+                    <!--<Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{Binding Path=ForegroundHoverColourBrush}"/>-->
+                    <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.MouseOver.Border}"/>
+                </Trigger>
+                <Trigger Property="IsPressed" Value="true">
+                    <!--<Setter Property="Background" TargetName="border" Value="{StaticResource Button.Pressed.Background}"/>-->
+                    <!--<Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{Binding Path=ForegroundPressedColourBrush}"/>-->
+                    <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Pressed.Border}"/>
+                </Trigger>
+                <Trigger Property="IsEnabled" Value="false">
+                    <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Disabled.Background}"/>
+                    <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Disabled.Border}"/>
+                    <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{StaticResource Button.Disabled.Foreground}"/>
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
+    </UserControl.Resources>
     <Border Padding="7" Visibility="{Binding Path=Visibility}">
-        <Button Style="{StaticResource CommandButton}" Click="bubbleClick" Content="{Binding Path=Content}"></Button>
+        <Button Template="{DynamicResource ColouredButton}" Click="bubbleClick" Content="{Binding Path=Content}"
+                BorderThickness="0" Padding="3">
+            <Button.Style>
+                <Style TargetType="Button">
+                    <Setter Property="Foreground" Value="{Binding ForegroundColourBrush}"/>
+                    <Setter Property="Background" Value="{Binding BackgroundColourBrush}"/>
+                    <Setter Property="FontSize" Value="{Binding FontSize}"/>
+                    <Style.Triggers>
+                        <Trigger Property="IsMouseOver" Value="true">
+                            <Setter Property="Background" Value="{Binding BackgroundHoverColourBrush}"/>
+                            <Setter Property="Foreground" Value="{Binding ForegroundHoverColourBrush}"/>
+                            <Setter Property="FontSize" Value="{Binding HoverFontSize}"/>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="true">
+                            <Setter Property="Background" Value="{Binding BackgroundPressedColourBrush}"/>
+                            <Setter Property="Foreground" Value="{Binding ForegroundPressedColourBrush}"/>
+                            <Setter Property="FontSize" Value="{Binding PressedFontSize}"/>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+        </Button>
     </Border>
 </UserControl>
