--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -26,7 +26,7 @@
         <DockPanel Grid.Column="0" Grid.Row="0">
             <StackPanel Orientation="Vertical" DockPanel.Dock="Top" Height="40" Background="Transparent">
                 <Border Grid.Row="0" Grid.Column="5" Padding="7" BorderThickness="0" HorizontalAlignment="Right">
-                    <Button  Click="onMenuClick" Content="Menu" />
+                    <Button BorderThickness="0" Click="onMenuClick" Content="⚙" FontSize="16" Padding="5" FontWeight="Bold" Foreground="Gold" Background="Transparent" />
                     <!-- Style="{StaticResource MenuButton}" -->
                 </Border>
             </StackPanel>
