--- a/ConfigurationWindow.xaml
+++ b/ConfigurationWindow.xaml
@@ -13,7 +13,12 @@
                 <Button Margin="0,2" Width="20" Height="20"><Bold>+</Bold></Button>
                 <Button Margin="2,2" Width="20" Height="20"><Bold>-</Bold></Button>
             </StackPanel>
-            <ListView ItemsSource="{Binding Path=Menus}">
+            <ListView ItemsSource="{Binding Path=Menus}" IsSynchronizedWithCurrentItem="True" SelectionChanged="ListView_SelectionChanged">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Path=Name}"/>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
 
             </ListView>
         </DockPanel>
@@ -23,7 +28,7 @@
             <Button Margin="2,0" Content="Cancel" IsCancel="True" />
         </StackPanel>
 
-        <Grid Margin="2,0,0,0">
+        <Grid Margin="2,0,0,0" DataContext="{Binding Path=Menus/}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
                 <RowDefinition />
@@ -41,43 +46,25 @@
                 </Grid.ColumnDefinitions>
 
                 <Label Grid.Row="0" Grid.Column="0">Name</Label>
-                <TextBox Grid.Row="0" Grid.Column="1">Name</TextBox>
+                <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Path=Name}"
+                         IsReadOnly="{Binding Path=IsReadOnly}"
+                         ></TextBox>
             </Grid>
 
-            <UniformGrid Columns="5" Rows="5" Grid.Row="1" Grid.Column="0" Width="250" Height="250">
-                <Button Margin="5"></Button>
-                <Button Margin="5"></Button>
-                <Button Margin="5"></Button>
-                <Button Margin="5"></Button>
-                <Button Margin="5"></Button>
-                <Button Margin="5"></Button>
-                <Button Margin="5"></Button>
-                <Button Margin="5"></Button>
-                <Button Margin="5"></Button>
-                <Button Margin="5"></Button>
-                <Button Margin="5"></Button>
-                <Button Margin="5"></Button>
-                <Button Margin="5" Visibility="Hidden"></Button>
-                <Button Margin="5"></Button>
-                <Button Margin="5"></Button>
-                <Button Margin="5"></Button>
-                <Button Margin="5"></Button>
-                <Button Margin="5"></Button>
-                <Button Margin="5"></Button>
-                <Button Margin="5"></Button>
-                <Button Margin="5"></Button>
-                <Button Margin="5"></Button>
-                <Button Margin="5"></Button>
-                <Button Margin="5"></Button>
-                <Button Margin="5"></Button>
+            <UniformGrid DataContext="{Binding Path=Buttons}" Name="ButtonGrid" Columns="5" Rows="5" Grid.Row="1" Grid.Column="0" Width="250" Height="250">
 
             </UniformGrid>
-            <Grid Grid.Row="1" Grid.Column="1">
+            <Grid Grid.Row="1" Grid.Column="1" DataContext="{Binding Path=Buttons/}" Margin="0,5,0,5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
@@ -89,20 +76,32 @@
                 <CheckBox Grid.Row="0" Grid.Column="1"></CheckBox>
 
                 <Label Grid.Row="1" Grid.Column="0">Background colour:</Label>
-                <TextBox Grid.Row="1" Grid.Column="1">#AA00000</TextBox>
-                
-                <Label Grid.Row="2" Grid.Column="0">Hover background colour:</Label>
-                <TextBox Grid.Row="2" Grid.Column="1">#AA00000</TextBox>
+                <DockPanel Grid.Row="1" Grid.Column="1">
+                    <Rectangle DockPanel.Dock="Left" Margin="0,0,10,0" Width="20" Height="15" VerticalAlignment="Center" Fill="{Binding Path=BackgroundColourBrush}" />
+                    <TextBox Text="{Binding Path=BackgroundColour}"></TextBox>
+                </DockPanel>
 
-                <Label Grid.Row="3" Grid.Column="0">Content type</Label>
-                <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Vertical">
+                <Label Grid.Row="2" Grid.Column="0">Hover background colour:</Label>
+                <DockPanel Grid.Row="2" Grid.Column="1">
+                    <Rectangle DockPanel.Dock="Left" Margin="0,0,10,0" Width="20" Height="15" VerticalAlignment="Center" Fill="{Binding Path=BackgroundHoverColourBrush}" />
+                    <TextBox Text="{Binding Path=BackgroundHoverColour}"></TextBox>
+                </DockPanel>
+
+                <Label Grid.Row="3" Grid.Column="0">Pressed background colour:</Label>
+                <DockPanel Grid.Row="3" Grid.Column="1">
+                    <Rectangle DockPanel.Dock="Left" Margin="0,0,10,0" Width="20" Height="15" VerticalAlignment="Center" Fill="{Binding Path=BackgroundPressedColourBrush}" />
+                    <TextBox Text="{Binding Path=BackgroundPressedColour}"></TextBox>
+                </DockPanel>
+
+                <Label Grid.Row="4" Grid.Column="0">Content type</Label>
+                <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Vertical">
                     <RadioButton Content="Text" />
                     <RadioButton Content="XAML (Fragment)"/>
                     <RadioButton Content="XAML (Full)"/>
                 </StackPanel>
                 
-                <Label Grid.Row="4" Grid.Column="0">Button content</Label>
-                <TextBox Grid.Row="4" Grid.Column="1" AcceptsReturn="True" TextWrapping="NoWrap" Height="150">untitled</TextBox>
+                <Label Grid.Row="5" Grid.Column="0">Button content</Label>
+                <TextBox Grid.Row="5" Grid.Column="1" AcceptsReturn="True" TextWrapping="NoWrap" Height="150">untitled</TextBox>
 
             </Grid>
         </Grid>
