--- a/ConfigurationWindow.xaml
+++ b/ConfigurationWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:overlay_popup" d:DataContext="{d:DesignInstance Type=local:ConfigurationViewModel}"
         mc:Ignorable="d"
-        Title="Configure" Height="600" Width="1000">
+        Title="Configure" Height="800" Width="1200">
     <DockPanel Margin="5">
 
         <DockPanel DockPanel.Dock="Left" Width="100">
@@ -15,6 +15,8 @@
             </StackPanel>
             <ListView ItemsSource="{Binding Path=Menus}" IsSynchronizedWithCurrentItem="True" SelectionChanged="ListView_SelectionChanged">
                 <ListView.ItemTemplate>
+                    
+                    
                     <DataTemplate>
                         <TextBlock Text="{Binding Path=Name}"/>
                     </DataTemplate>
@@ -142,13 +144,12 @@
                                     </ListBox.ItemTemplate>
                                 </ListBox>
 
-                                <Border Name="ActionPanel" BorderThickness="0">
-                                    <ContentPresenter Visibility="{Binding Path=ActionVisibility}"
-                                                      Content="{Binding Path=Action.ConfigElement}"
-                                                      DataContext="{Binding Path=Action}" />
-                                </Border>
-                                
                             </StackPanel>
+                            <Border Name="ActionPanel" BorderThickness="0" Grid.ColumnSpan="2" Grid.Row="5" Visibility="{Binding Path=ActionVisibility}">
+                                <Grid DataContext="{Binding Action}">
+                                    <ContentPresenter Content="{Binding Path=ConfigElement}"/>
+                                </Grid>
+                            </Border>
                         </Grid>
                     </ScrollViewer>
                 </TabItem>
